--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>Cargo TJ (Behzod)  </title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1,0">
     
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,700|Oswald:400,700" rel="stylesheet">
 
@@ -418,6 +418,7 @@
       }
     }
   </script>
+  
                   </div>
                 </form>
               </div>
